[package]
name = "yam-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "yam"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
argh.workspace = true
tracing-subscriber.workspace = true
yam-cache.workspace = true
yam-core.workspace = true
yam-fs.workspace = true
yam-tools.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
